[package]
name = "simconnect-sys"
version = "0.23.1-latest.0"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "FFI bindings for SimConnect."
documentation = "https://docs.rs/simconnect-sys"
homepage = "https://github.com/jcramb/simconnect-rs/tree/main/simconnect-sys"
repository = "https://github.com/jcramb/simconnect-rs/"
keywords = ["simconnect", "msfs", "sdk", "rust"]
categories = ["external-ffi-bindings"]
license = "MIT OR Apache-2.0"
links = "SimConnect"
edition = "2021"

[features]
static = []
vendored = []

[build-dependencies]
bindgen = "0.69.1"

[dev-dependencies]
anyhow = "1.0.75"

[package.metadata.docs.rs]
features = ["vendored"]