[package]
name = "sample-no-callback"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "Responds to the user aircraft brakes, without a callback function."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
c_msfs_sdk = ["simconnect-sys/c_msfs_sdk"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }