[package]
name = "sample-open-and-close"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "Opens and immediately closes SimConnect."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
vendored = ["simconnect-sys/vendored"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }
