[package]
name = "sample-open-and-close"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "Opens and immediately closes SimConnect."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
c_msfs_sdk = ["simconnect-sys/c_msfs_sdk"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }
