[package]
name = "sample-request-data"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "After a flight has loaded, request the lat/lon/alt of the user aircraft."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
vendored = ["simconnect-sys/vendored"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }