[package]
name = "sample-send-event-a"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "Whenever the brakes are hit, sends two custom client events to all other clients, one of the events is maskable. Send Event B and C should receive these events."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
c_msfs_sdk = ["simconnect-sys/c_msfs_sdk"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }