[package]
name = "sample-set-data"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "When Z is pressed, the user aircraft is moved to a new location."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
vendored = ["simconnect-sys/vendored"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }