[package]
name = "sample-system-event"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "Request a FlightLoaded system event."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
c_msfs_sdk = ["simconnect-sys/c_msfs_sdk"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }