[package]
name = "sample-tagged-data"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "After a flight has loaded, request the vertical speed and pitot headt switch setting of the user aircraft, but only when the data has changed."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
c_msfs_sdk = ["simconnect-sys/c_msfs_sdk"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }
