[package]
name = "sample-throttle-control"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "Press A to increase throttle by 5%. Press Z to decrease the throttle by 5%."
version = "0.0.0"
edition = "2021"
publish = false

[features]
static = ["simconnect-sys/static"]
c_msfs_sdk = ["simconnect-sys/c_msfs_sdk"]

[dependencies]
simconnect-sys = { path = "../../simconnect-sys" }
