[package]
name = "sdk-version"
authors = [
    "John Cramb <john@simconnect.dev>"
]
description = "Checks for new SDK versions."
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
regex = "1.10.2"
reqwest = { version = "0.11.22", features = [ "blocking" ] }
scraper = "0.18.1"
semver = "1.0.20"
